restructure endpoints and add phylopic
